--- a/src/Messages.properties
+++ b/src/Messages.properties
@@ -2,3 +2,4 @@ toolBarText = Moviebase
 menuBarSaveButton = saveButton
 movieNameSearch = Enter movie name
 searchButton = Search
+menuBarListButton = Changenig
