--- a/src/Messages.properties
+++ b/src/Messages.properties
@@ -2,3 +2,14 @@ toolBarText = Moviebase
 menuBarSaveButton = saveButton
 movieNameSearch = Enter movie name
 searchButton = Search
+menuBarListButton = Change
+movieIDString = ID
+movieTitleString = Title
+movieYearString = Date
+movieGenreString = Genre
+movieActorsString = Actors
+movieRatingString = Rating
+moviePosterString = Image
+listSearchBar = Movie name
+listSearchTitle = Find in table:
+listSearchButton = Search
