--- a/src/Messages.properties
+++ b/src/Messages.properties
@@ -13,3 +13,5 @@ moviePosterString = Image
 listSearchBar = Movie name
 listSearchTitle = Find in table:
 listSearchButton = Search
+searchMovieButton = Search
+addMovieButton = Add
