--- a/src/Messages.properties
+++ b/src/Messages.properties
@@ -15,3 +15,9 @@ listSearchTitle = Find in table:
 listSearchButton = Search
 searchMovieButton = Search
 addMovieButton = Add
+menuTitleString = MEDIABASE
+menuNewListButton = Create new list
+menuViewListButton = View existing list
+newListNameLabel = List name
+newListAuthorName = List author
+searchMovieLabel = Search movie:
