--- a/src/Messages.properties
+++ b/src/Messages.properties
@@ -1,23 +1,18 @@
-toolBarText = Moviebase
 menuBarSaveButton = saveButton
-movieNameSearch = Enter movie name
-searchButton = Search
 menuBarListButton = Change
 movieIDString = ID
 movieTitleString = Title
 movieYearString = Date
-movieGenreString = Genre
-movieActorsString = Actors
-movieRatingString = Rating
+movieRatingString = Score
 moviePosterString = Image
-listSearchBar = Movie name
 listSearchTitle = Find in table:
 listSearchButton = Search
 searchMovieButton = Search
 addMovieButton = Add
-menuTitleString = MEDIABASE
+menuTitleString = Mediabase
 menuNewListButton = Create new list
 menuViewListButton = View existing list
-newListNameLabel = List name
-newListAuthorName = List author
 searchMovieLabel = Search movie:
+saveButtonLabel = Save
+listNameLabel = List name
+listAuthorLabel = Author name
