--- a/src/Messages.properties
+++ b/src/Messages.properties
@@ -1,4 +1,4 @@
-menuBarSaveButton = saveButton
+menuBarSaveButton = Save and quit
 menuBarListButton = Change
 movieIDString = ID
 movieTitleString = Title
@@ -8,7 +8,7 @@ moviePosterString = Image
 listSearchTitle = Find in table:
 listSearchButton = Search
 searchMovieButton = Search
-addMovieButton = Add
+addMovieButton = Add movie
 menuTitleString = Mediabase
 menuNewListButton = Create new list
 menuViewListButton = View existing list
@@ -16,3 +16,5 @@ searchMovieLabel = Search movie:
 saveButtonLabel = Save
 listNameLabel = List name
 listAuthorLabel = Author name
+movieMoreString = More info
+selectListString = View selected list
